added feature importance ranking in breast cancer model interpreter report

--- a/tutorials/compiler/breastcancer/sample.ipynb
+++ b/tutorials/compiler/breastcancer/sample.ipynb
@@ -45,12 +45,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import warnings\n",
     "\n",
+    "from pprint import pprint\n",
     "import numpy as np\n",
     "from sklearn import datasets\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +77,7 @@
        "(455, 30)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -177,6 +178,16 @@
       "{'content_table': True,\n",
       " 'contents': [{'desc': 'This section provides the Interpretation of model',\n",
       "               'sections': [{'component': {'_comment': 'refer to document '\n",
+      "                                                       'section xxxx',\n",
+      "                                           'attr': {'feature_names': 'var:feature_names',\n",
+      "                                                    'method': 'default',\n",
+      "                                                    'train_data': 'var:X_train',\n",
+      "                                                    'trained_model': 'var:clf'},\n",
+      "                                           'class': 'FeatureImportanceRanking'},\n",
+      "                             'desc': 'This section provides the analysis on '\n",
+      "                                     'feature',\n",
+      "                             'title': 'Feature Importance Analysis'},\n",
+      "                            {'component': {'_comment': 'refer to document '\n",
       "                                                       'section xxxx',\n",
       "                                           'attr': {'domain': 'tabular',\n",
       "                                                    'error_analysis_k_value': 5,\n",
@@ -197,10 +208,9 @@
       "                                                    'valid_y': 'var:y_test'},\n",
       "                                           'class': 'ModelInterpreter'},\n",
       "                             'desc': 'Model and train data from Breast Cancer',\n",
-      "                             'title': 'Model Interpreter Analysis with Breast '\n",
-      "                                      'Cancer data-set'}],\n",
-      "               'title': 'Model Interpreter'}],\n",
-      " 'name': 'Report for Breast Cancer Model Interpreter.',\n",
+      "                             'title': 'Model Interpreter Analysis '}],\n",
+      "               'title': 'Model Interpreter with Breast Cancer data-set'}],\n",
+      " 'name': 'Report for Breast Cancer Model Interpreter',\n",
       " 'overview': True,\n",
       " 'writers': [{'attr': {'name': 'breastcancer-model-interpreter-report'},\n",
       "              'class': 'Pdf'}]}\n"
@@ -223,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -233,6 +243,43 @@
       "{'content_table': True,\n",
       " 'contents': [{'desc': 'This section provides the Interpretation of model',\n",
       "               'sections': [{'component': {'_comment': 'refer to document '\n",
+      "                                                       'section xxxx',\n",
+      "                                           'attr': {'feature_names': array(['mean radius', 'mean texture', 'mean perimeter', 'mean area',\n",
+      "       'mean smoothness', 'mean compactness', 'mean concavity',\n",
+      "       'mean concave points', 'mean symmetry', 'mean fractal dimension',\n",
+      "       'radius error', 'texture error', 'perimeter error', 'area error',\n",
+      "       'smoothness error', 'compactness error', 'concavity error',\n",
+      "       'concave points error', 'symmetry error',\n",
+      "       'fractal dimension error', 'worst radius', 'worst texture',\n",
+      "       'worst perimeter', 'worst area', 'worst smoothness',\n",
+      "       'worst compactness', 'worst concavity', 'worst concave points',\n",
+      "       'worst symmetry', 'worst fractal dimension'], dtype='<U23'),\n",
+      "                                                    'method': 'default',\n",
+      "                                                    'train_data': array([[1.462e+01, 2.402e+01, 9.457e+01, ..., 6.946e-02, 2.522e-01,\n",
+      "        7.246e-02],\n",
+      "       [1.729e+01, 2.213e+01, 1.144e+02, ..., 1.528e-01, 3.067e-01,\n",
+      "        7.484e-02],\n",
+      "       [9.777e+00, 1.699e+01, 6.250e+01, ..., 5.334e-02, 2.533e-01,\n",
+      "        8.468e-02],\n",
+      "       ...,\n",
+      "       [1.349e+01, 2.230e+01, 8.691e+01, ..., 1.282e-01, 2.871e-01,\n",
+      "        6.917e-02],\n",
+      "       [1.849e+01, 1.752e+01, 1.213e+02, ..., 1.663e-01, 2.510e-01,\n",
+      "        9.445e-02],\n",
+      "       [1.478e+01, 2.394e+01, 9.740e+01, ..., 1.614e-01, 3.321e-01,\n",
+      "        8.911e-02]]),\n",
+      "                                                    'trained_model': RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
+      "                       max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
+      "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
+      "                       min_samples_leaf=1, min_samples_split=2,\n",
+      "                       min_weight_fraction_leaf=0.0, n_estimators=10,\n",
+      "                       n_jobs=None, oob_score=False, random_state=None,\n",
+      "                       verbose=0, warm_start=False)},\n",
+      "                                           'class': 'FeatureImportanceRanking'},\n",
+      "                             'desc': 'This section provides the analysis on '\n",
+      "                                     'feature',\n",
+      "                             'title': 'Feature Importance Analysis'},\n",
+      "                            {'component': {'_comment': 'refer to document '\n",
       "                                                       'section xxxx',\n",
       "                                           'attr': {'domain': 'tabular',\n",
       "                                                    'error_analysis_k_value': 5,\n",
@@ -318,10 +365,9 @@
       "       0, 1, 0, 1])},\n",
       "                                           'class': 'ModelInterpreter'},\n",
       "                             'desc': 'Model and train data from Breast Cancer',\n",
-      "                             'title': 'Model Interpreter Analysis with Breast '\n",
-      "                                      'Cancer data-set'}],\n",
-      "               'title': 'Model Interpreter'}],\n",
-      " 'name': 'Report for Breast Cancer Model Interpreter.',\n",
+      "                             'title': 'Model Interpreter Analysis '}],\n",
+      "               'title': 'Model Interpreter with Breast Cancer data-set'}],\n",
+      " 'name': 'Report for Breast Cancer Model Interpreter',\n",
       " 'overview': True,\n",
       " 'writers': [{'attr': {'name': 'breastcancer-model-interpreter-report'},\n",
       "              'class': 'Pdf'}]}\n"
@@ -342,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,18 +404,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('report generated : '\n",
-      " '/Users/i062308/Development/Explainable_AI/tutorials/compiler/breastcancer/breastcancer-model-interpreter-report.pdf')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pprint(\"report generated : %s/breastcancer-model-interpreter-report.pdf\" % os.getcwd())"
    ]
