convert dataframe to numpy array with compiler, tested with unit test and tutorial

--- a/tutorials/compiler/breastcancer/sample.ipynb
+++ b/tutorials/compiler/breastcancer/sample.ipynb
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,9 +404,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('report generated : '\n",
+      " '/Users/i062308/Development/Explainable_AI/tutorials/compiler/breastcancer/breastcancer-model-interpreter-report.pdf')\n"
+     ]
+    }
+   ],
    "source": [
     "pprint(\"report generated : %s/breastcancer-model-interpreter-report.pdf\" % os.getcwd())"
    ]
