Changed dummy class to NA

--- a/tutorials/explainer/lime_tabular_explainer_regression.ipynb
+++ b/tutorials/explainer/lime_tabular_explainer_regression.ipynb
@@ -368,7 +368,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first level of the stats is the class, which in the case of regression is just a dummy `0`."
+    "The first level of the stats is the class, which in the case of regression is just a dummy class."
    ]
   },
   {
