--- a/tutorials/explainer/lime_tabular_explainer_regression.ipynb
+++ b/tutorials/explainer/lime_tabular_explainer_regression.ipynb
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -286,6 +286,8 @@
       "  idx + 1, len(samples)))\n",
       "../../xai/model/interpreter/model_interpreter.py:83: UserWarning: Interpret 200/404 samples\n",
       "  idx + 1, len(samples)))\n",
+      "/Users/i330688/venv_xai/lib/python3.6/site-packages/sklearn/linear_model/ridge.py:147: LinAlgWarning: Ill-conditioned matrix (rcond=9.36508e-31): result may not be accurate.\n",
+      "  overwrite_a=True).T\n",
       "../../xai/model/interpreter/model_interpreter.py:83: UserWarning: Interpret 300/404 samples\n",
       "  idx + 1, len(samples)))\n",
       "../../xai/model/interpreter/model_interpreter.py:83: UserWarning: Interpret 400/404 samples\n",
@@ -295,58 +297,58 @@
     {
      "data": {
       "text/plain": [
-       "({0: {'CHAS <= 0.00': 4.814356435643564,\n",
-       "   'ZN <= 0.00': 2.910891089108911,\n",
-       "   'LSTAT <= 7.17': 2.4306930693069306,\n",
-       "   'RM > 6.63': 2.4034653465346536,\n",
-       "   '7.17 < LSTAT <= 11.68': 2.1064356435643563,\n",
-       "   '345.00 < TAX <= 666.00': 1.8836633663366336,\n",
-       "   '5.00 < RAD <= 24.00': 1.7673267326732673,\n",
-       "   'DIS <= 2.06': 1.5495049504950495,\n",
-       "   '9.90 < INDUS <= 18.10': 1.5074257425742574,\n",
-       "   '19.10 < PTRATIO <= 20.20': 1.4628712871287128,\n",
-       "   'RAD <= 4.00': 1.4603960396039604,\n",
-       "   '0.45 < NOX <= 0.54': 1.381188118811881,\n",
-       "   'CRIM > 3.84': 1.2920792079207921,\n",
-       "   'PTRATIO <= 17.40': 1.1707920792079207,\n",
-       "   'B > 395.81': 1.146039603960396,\n",
-       "   'NOX <= 0.45': 1.1262376237623761,\n",
-       "   '2.06 < DIS <= 3.10': 1.1212871287128714,\n",
-       "   'AGE <= 44.60': 1.113861386138614,\n",
-       "   'TAX <= 283.25': 1.0965346534653466,\n",
-       "   '0.09 < CRIM <= 0.29': 1.056930693069307,\n",
-       "   '0.54 < NOX <= 0.64': 1.051980198019802,\n",
-       "   '44.60 < AGE <= 77.95': 1.0123762376237624,\n",
-       "   '17.40 < PTRATIO <= 19.10': 1.00990099009901,\n",
-       "   'INDUS <= 5.29': 0.995049504950495,\n",
-       "   '5.29 < INDUS <= 9.90': 0.9579207920792079,\n",
-       "   '0.29 < CRIM <= 3.84': 0.9529702970297029,\n",
-       "   '283.25 < TAX <= 345.00': 0.9405940594059405,\n",
-       "   'NOX > 0.64': 0.9306930693069307,\n",
-       "   'B <= 375.47': 0.9232673267326733,\n",
-       "   '375.47 < B <= 391.19': 0.9158415841584159,\n",
-       "   '391.19 < B <= 395.81': 0.905940594059406,\n",
-       "   'AGE > 94.15': 0.905940594059406,\n",
-       "   'ZN > 12.50': 0.8836633663366337,\n",
-       "   'CRIM <= 0.09': 0.8663366336633663,\n",
-       "   '77.95 < AGE <= 94.15': 0.8292079207920792,\n",
-       "   'DIS > 5.10': 0.7524752475247525,\n",
-       "   '6.19 < RM <= 6.63': 0.7400990099009901,\n",
-       "   '4.00 < RAD <= 5.00': 0.7227722772277227,\n",
-       "   '3.10 < DIS <= 5.10': 0.650990099009901,\n",
-       "   '5.88 < RM <= 6.19': 0.5693069306930693,\n",
-       "   'INDUS > 18.10': 0.5396039603960396,\n",
-       "   '11.68 < LSTAT <= 17.15': 0.4876237623762376,\n",
-       "   'RM <= 5.88': 0.4801980198019802,\n",
-       "   'PTRATIO > 20.20': 0.4430693069306931,\n",
-       "   'CHAS > 0.00': 0.3217821782178218,\n",
+       "({'NA': {'CHAS <= 0.00': 4.378712871287129,\n",
+       "   'ZN <= 0.00': 3.1707920792079207,\n",
+       "   'LSTAT <= 7.17': 2.4282178217821784,\n",
+       "   'RM > 6.63': 2.405940594059406,\n",
+       "   '7.17 < LSTAT <= 11.68': 2.0915841584158414,\n",
+       "   '345.00 < TAX <= 666.00': 1.9034653465346534,\n",
+       "   '5.00 < RAD <= 24.00': 1.797029702970297,\n",
+       "   'DIS <= 2.06': 1.7153465346534653,\n",
+       "   '19.10 < PTRATIO <= 20.20': 1.4504950495049505,\n",
+       "   'PTRATIO <= 17.40': 1.386138613861386,\n",
+       "   'RAD <= 4.00': 1.3787128712871286,\n",
+       "   'CRIM > 3.84': 1.3044554455445545,\n",
+       "   '44.60 < AGE <= 77.95': 1.2574257425742574,\n",
+       "   '9.90 < INDUS <= 18.10': 1.2128712871287128,\n",
+       "   '391.19 < B <= 395.81': 1.1707920792079207,\n",
+       "   '2.06 < DIS <= 3.10': 1.1336633663366336,\n",
+       "   'NOX <= 0.45': 1.1113861386138615,\n",
+       "   '5.29 < INDUS <= 9.90': 1.1014851485148516,\n",
+       "   '375.47 < B <= 391.19': 1.0891089108910892,\n",
+       "   'INDUS <= 5.29': 1.0891089108910892,\n",
+       "   'B > 395.81': 1.0866336633663367,\n",
+       "   'AGE <= 44.60': 1.0222772277227723,\n",
+       "   '0.45 < NOX <= 0.54': 1.0222772277227723,\n",
+       "   'AGE > 94.15': 0.9752475247524752,\n",
+       "   '17.40 < PTRATIO <= 19.10': 0.9727722772277227,\n",
+       "   'B <= 375.47': 0.9727722772277227,\n",
+       "   'TAX <= 283.25': 0.943069306930693,\n",
+       "   '0.54 < NOX <= 0.64': 0.9381188118811881,\n",
+       "   '0.29 < CRIM <= 3.84': 0.9306930693069307,\n",
+       "   '283.25 < TAX <= 345.00': 0.9207920792079208,\n",
+       "   'ZN > 12.50': 0.9108910891089109,\n",
+       "   '4.00 < RAD <= 5.00': 0.8985148514851485,\n",
+       "   '0.09 < CRIM <= 0.29': 0.8886138613861386,\n",
+       "   '77.95 < AGE <= 94.15': 0.8539603960396039,\n",
+       "   'CRIM <= 0.09': 0.8267326732673267,\n",
+       "   'NOX > 0.64': 0.8242574257425742,\n",
+       "   'DIS > 5.10': 0.806930693069307,\n",
+       "   '3.10 < DIS <= 5.10': 0.7920792079207921,\n",
+       "   '6.19 < RM <= 6.63': 0.7004950495049505,\n",
+       "   '5.88 < RM <= 6.19': 0.5445544554455446,\n",
+       "   'INDUS > 18.10': 0.5074257425742574,\n",
+       "   'RM <= 5.88': 0.4900990099009901,\n",
+       "   '11.68 < LSTAT <= 17.15': 0.46782178217821785,\n",
+       "   'PTRATIO > 20.20': 0.37623762376237624,\n",
+       "   'CHAS > 0.00': 0.3094059405940594,\n",
        "   'LSTAT > 17.15': 0.25,\n",
-       "   '0.00 < ZN <= 12.50': 0.07920792079207921,\n",
-       "   'TAX > 666.00': 0.07920792079207921}},\n",
+       "   '0.00 < ZN <= 12.50': 0.14356435643564355,\n",
+       "   'TAX > 666.00': 0.04702970297029703}},\n",
        " 404)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
