add plotting dot shap values

--- a/tutorials/compiler/titanic2/sample.ipynb
+++ b/tutorials/compiler/titanic2/sample.ipynb
@@ -323,7 +323,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/i062308/anaconda3/envs/xai-py37/lib/python3.7/site-packages/ipykernel_launcher.py:14: SettingWithCopyWarning: \n",
+      "/Users/i309943/opt/anaconda3/envs/xai/lib/python3.6/site-packages/ipykernel_launcher.py:14: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -433,54 +433,54 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>482</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
+       "      <th>615</th>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>620</th>\n",
+       "      <th>13</th>\n",
        "      <td>3</td>\n",
-       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>102</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>685</th>\n",
-       "      <td>2</td>\n",
+       "      <th>509</th>\n",
+       "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>801</th>\n",
-       "      <td>2</td>\n",
+       "      <th>494</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>470</th>\n",
        "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -488,11 +488,11 @@
       ],
       "text/plain": [
        "     Pclass  Sex  Age  Fare  Embarked  is_alone  title\n",
-       "482       3    1    3     1         0         1      1\n",
-       "620       3    1    1     2         1         0      1\n",
-       "102       1    1    1     3         0         0      1\n",
-       "685       2    1    1     3         1         0      1\n",
-       "801       2    0    1     2         0         0      3"
+       "615       2    0    1     3         0         0      2\n",
+       "13        3    1    2     3         0         0      1\n",
+       "509       3    1    1     3         0         1      1\n",
+       "494       3    1    1     1         0         1      1\n",
+       "470       3    1    1     0         0         1      1"
       ]
      },
      "execution_count": 4,
@@ -532,7 +532,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/i062308/anaconda3/envs/xai-py37/lib/python3.7/site-packages/sklearn/ensemble/forest.py:245: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
+      "/Users/i309943/opt/anaconda3/envs/xai/lib/python3.6/site-packages/sklearn/ensemble/forest.py:245: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
       "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n"
      ]
     }
@@ -570,8 +570,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model Training Accuracy:  84.41\n",
-      "Model Testing Accuracy:  77.65\n"
+      "Model Training Accuracy:  83.43\n",
+      "Model Testing Accuracy:  81.56\n"
      ]
     }
    ],
@@ -720,24 +720,36 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "../../../xai/data/helper.py:154: UserWarning: Warning: the feature [PassengerId] is suspected to be key feature as it is monotonic integer. \n",
+      "../../../xai/compiler/explainer.py:120: FutureWarning: Method .as_matrix will be removed in a future version. Use .values instead.\n",
+      "  train_data = train_data.as_matrix()\n",
+      "../../../xai/data/helper.py:156: UserWarning: Warning: the feature [PassengerId] is suspected to be key feature as it is monotonic integer. \n",
       "[Examples]: [1, 2, 3, 4, 5]\n",
       "\n",
       "  '[Examples]: %s\\n' % (column, col_data.tolist()[:5]))\n",
-      "../../../xai/data/helper.py:179: UserWarning: Warning: the feature [Ticket] is suspected to be identifiable feature. \n",
+      "../../../xai/data/helper.py:181: UserWarning: Warning: the feature [Ticket] is suspected to be identifiable feature. \n",
       "[Examples]: ['A/5 21171', 'PC 17599', 'STON/O2. 3101282', '113803', '373450']\n",
       "\n",
       "  '[Examples]: %s\\n' % (column, col_data.tolist()[:5]))\n",
-      "../../../xai/data/helper.py:179: UserWarning: Warning: the feature [Cabin] is suspected to be identifiable feature. \n",
+      "../../../xai/data/helper.py:181: UserWarning: Warning: the feature [Cabin] is suspected to be identifiable feature. \n",
       "[Examples]: [nan, 'C85', nan, 'C123', nan]\n",
       "\n",
       "  '[Examples]: %s\\n' % (column, col_data.tolist()[:5]))\n",
-      "../../../xai/graphs/graph_generator.py:39: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "../../../xai/formatter/portable_document/publisher.py:639: UserWarning: Warning: figure will exceed the page bottom, adding a new page.\n",
+      "  warnings.warn(message='Warning: figure will exceed the page bottom, '\n",
+      "../../../xai/graphs/graph_generator.py:47: RuntimeWarning: invalid value encountered in double_scalars\n",
       "  ave_acc = np.sum(accuracy[condition]) / sample_num\n",
-      "/Users/i062308/anaconda3/envs/xai-py37/lib/python3.7/site-packages/numpy/core/fromnumeric.py:3118: RuntimeWarning: Mean of empty slice.\n",
+      "/Users/i309943/opt/anaconda3/envs/xai/lib/python3.6/site-packages/numpy/core/fromnumeric.py:3118: RuntimeWarning: Mean of empty slice.\n",
       "  out=out, **kwargs)\n",
-      "/Users/i062308/anaconda3/envs/xai-py37/lib/python3.7/site-packages/numpy/core/_methods.py:85: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  ret = ret.dtype.type(ret / rcount)\n"
+      "/Users/i309943/opt/anaconda3/envs/xai/lib/python3.6/site-packages/numpy/core/_methods.py:85: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  ret = ret.dtype.type(ret / rcount)\n",
+      "../../../xai/formatter/portable_document/publisher.py:454: UserWarning: Warning: figure will exceed the page bottom, adding a new page.\n",
+      "  warnings.warn(message='Warning: figure will exceed the page bottom, '\n",
+      "../../../xai/formatter/portable_document/publisher.py:459: UserWarning: Warning: figure will exceed the page bottom, adding a new page.\n",
+      "  warnings.warn(message='Warning: figure will exceed the page bottom, '\n",
+      "../../../xai/formatter/portable_document/publisher.py:531: UserWarning: Warning: figure will exceed the page edge on the right, rescale the whole group.\n",
+      "  warnings.warn(message='Warning: figure will exceed the page edge '\n",
+      "../../../xai/formatter/portable_document/publisher.py:551: UserWarning: Warning: figure will exceed the page bottom, adding a new page.\n",
+      "  warnings.warn(message='Warning: figure will exceed the page bottom, '\n"
      ]
     }
    ],
@@ -768,7 +780,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "report generated : /Users/i062308/Development/Explainable_AI/tutorials/compiler/titanic2/titanic-basic-report.pdf\n"
+      "report generated : /Users/i309943/workspace/Explainable_AI/tutorials/compiler/titanic2/titanic-basic-report.pdf\n"
      ]
     }
    ],
@@ -785,7 +797,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "explainer generated : /Users/i062308/Development/Explainable_AI/tutorials/compiler/titanic2/explainer.pkl\n"
+      "explainer generated : /Users/i309943/workspace/Explainable_AI/tutorials/compiler/titanic2/explainer.pkl\n"
      ]
     }
    ],
@@ -809,20 +821,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0: {'confidence': 0.05934932187038927,\n",
-      "     'explanation': [{'feature': 'title=Mrs', 'score': -0.22476928065679708},\n",
-      "                     {'feature': 'Pclass=1', 'score': -0.21447314312792815},\n",
-      "                     {'feature': 'Sex=female', 'score': -0.14969203934729372},\n",
-      "                     {'feature': 'Age=between 48 and 64',\n",
-      "                      'score': 0.059051833909202156},\n",
-      "                     {'feature': 'Embarked=C', 'score': -0.03752962095308504}]},\n",
-      " 1: {'confidence': 0.9406506781296107,\n",
-      "     'explanation': [{'feature': 'title=Mrs', 'score': 0.22476928065679705},\n",
-      "                     {'feature': 'Pclass=1', 'score': 0.21447314312792815},\n",
-      "                     {'feature': 'Sex=female', 'score': 0.14969203934729378},\n",
-      "                     {'feature': 'Age=between 48 and 64',\n",
-      "                      'score': -0.05905183390920213},\n",
-      "                     {'feature': 'Embarked=C', 'score': 0.03752962095308505}]}}\n"
+      "{0: {'explanation': [{'feature': 'Sex=male', 'score': 0.2667696553126673},\n",
+      "                     {'feature': 'Embarked=S', 'score': 0.032281049021469756},\n",
+      "                     {'feature': 'is_alone=Yes',\n",
+      "                      'score': -0.030266655575790963},\n",
+      "                     {'feature': 'Pclass=2', 'score': -0.056222958837791485},\n",
+      "                     {'feature': 'title=Rare', 'score': -0.07360802296209705}],\n",
+      "     'prediction': 0.8584999999999999},\n",
+      " 1: {'explanation': [{'feature': 'title=Rare', 'score': 0.07360802296209706},\n",
+      "                     {'feature': 'Pclass=2', 'score': 0.05622295883779148},\n",
+      "                     {'feature': 'is_alone=Yes', 'score': 0.030266655575790943},\n",
+      "                     {'feature': 'Embarked=S', 'score': -0.03228104902146975},\n",
+      "                     {'feature': 'Sex=male', 'score': -0.2667696553126673}],\n",
+      "     'prediction': 0.14150000000000001}}\n"
      ]
     }
    ],
@@ -840,9 +851,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:xai-py37] *",
+   "display_name": "Python (xai)",
    "language": "python",
-   "name": "conda-env-xai-py37-py"
+   "name": "xai"
   },
   "language_info": {
    "codemirror_mode": {
@@ -854,7 +865,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
