--- a/tutorials/compiler/housingpricing/sample.ipynb
+++ b/tutorials/compiler/housingpricing/sample.ipynb
@@ -75,10 +75,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\tvalidation_0-rmse:66964.2\n",
+      "[0]\tvalidation_0-rmse:78130.9\n",
       "Will train until validation_0-rmse hasn't improved in 5 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[54]\tvalidation_0-rmse:21674.5\n",
+      "[46]\tvalidation_0-rmse:27040\n",
       "\n"
      ]
     }
@@ -125,19 +125,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         worse\n",
-      "0  -78879.0625\n",
-      "1  -79771.8125\n",
-      "2  -95349.3125\n",
-      "3   97974.9375\n",
-      "4 -128526.9375\n",
+      "          worse\n",
+      "0   87970.56250\n",
+      "1 -107742.65625\n",
+      "2 -134472.62500\n",
+      "3 -145948.43750\n",
+      "4 -210647.00000\n",
       "\n",
-      "         best\n",
-      "0  -60.687500\n",
-      "1  -95.265625\n",
-      "2   97.875000\n",
-      "3 -135.640625\n",
-      "4 -139.718750\n"
+      "        best\n",
+      "0  22.710938\n",
+      "1  44.125000\n",
+      "2 -58.718750\n",
+      "3 -60.546875\n",
+      "4 -93.468750\n"
      ]
     }
    ],
@@ -258,7 +258,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "json_config = 'regressor-model-interpreter.json'"
+    "json_config = 'lime-tabular-regressor-model-interpreter.json'"
    ]
   },
   {
@@ -390,7 +390,7 @@
       "                                                    'model_interpret_k_value': 5,\n",
       "                                                    'model_interpret_stats_type': 'top_k',\n",
       "                                                    'model_interpret_top_value': 15,\n",
-      "                                                    'predict_func': <bound method XGBModel.predict of XGBRegressor(base_score=182895.9406392694, booster='gbtree',\n",
+      "                                                    'predict_func': <bound method XGBModel.predict of XGBRegressor(base_score=179240.15525114155, booster='gbtree',\n",
       "             colsample_bylevel=0.8, colsample_bytree=0.8, gamma=0,\n",
       "             learning_rate=0.1, max_delta_step=0, max_depth=5,\n",
       "             min_child_weight=1, missing=None, n_estimators=1000, n_jobs=1,\n",
@@ -399,56 +399,56 @@
       "             subsample=0.7)>,\n",
       "                                                    'target_names': ['SalePrice'],\n",
       "                                                    'train_data':       MSSubClass  LotFrontage  LotArea  OverallQual  OverallCond  YearBuilt  \\\n",
-      "0          120.0    43.000000   3182.0          7.0          5.0     2005.0   \n",
-      "1           20.0    70.851111  14585.0          6.0          6.0     1960.0   \n",
-      "2           20.0    64.000000  10475.0          8.0          5.0     2008.0   \n",
-      "3           20.0    95.000000  11639.0          7.0          5.0     2007.0   \n",
-      "4           20.0    68.000000   8562.0          5.0          6.0     1957.0   \n",
+      "0           70.0     60.00000   9600.0          4.0          2.0     1900.0   \n",
+      "1           60.0     69.81278  17542.0          7.0          7.0     1974.0   \n",
+      "2          190.0     76.00000   7630.0          5.0          9.0     1900.0   \n",
+      "3           60.0     75.00000  11404.0          7.0          5.0     1998.0   \n",
+      "4           60.0     60.00000   8123.0          6.0          5.0     2000.0   \n",
       "...          ...          ...      ...          ...          ...        ...   \n",
-      "1090        60.0    75.000000   9375.0          7.0          5.0     2003.0   \n",
-      "1091        20.0    70.851111   8339.0          5.0          7.0     1959.0   \n",
-      "1092        60.0    70.851111   7750.0          7.0          5.0     2003.0   \n",
-      "1093        20.0    68.000000   9571.0          5.0          3.0     1958.0   \n",
-      "1094        45.0    58.000000   6380.0          5.0          6.0     1922.0   \n",
+      "1090        20.0     75.00000   9986.0          8.0          5.0     2006.0   \n",
+      "1091        20.0     60.00000   7024.0          5.0          5.0     2005.0   \n",
+      "1092        60.0    118.00000  35760.0         10.0          5.0     1995.0   \n",
+      "1093        20.0     84.00000   8658.0          6.0          5.0     1965.0   \n",
+      "1094        20.0    103.00000  13472.0         10.0          5.0     2003.0   \n",
       "\n",
       "      YearRemodAdd  MasVnrArea  BsmtFinSF1  BsmtFinSF2  ...  GarageArea  \\\n",
-      "0           2006.0   11.000000        16.0         0.0  ...       397.0   \n",
-      "1           1987.0   85.000000       594.0       219.0  ...       572.0   \n",
-      "2           2008.0   72.000000         0.0         0.0  ...       776.0   \n",
-      "3           2008.0  107.928309         0.0         0.0  ...       480.0   \n",
-      "4           2002.0  145.000000       383.0         0.0  ...       364.0   \n",
+      "0           1950.0         0.0         0.0         0.0  ...       779.0   \n",
+      "1           2003.0         0.0       125.0      1031.0  ...       518.0   \n",
+      "2           1996.0         0.0         0.0         0.0  ...       672.0   \n",
+      "3           1999.0       202.0       252.0         0.0  ...       541.0   \n",
+      "4           2000.0        16.0         0.0         0.0  ...       463.0   \n",
       "...            ...         ...         ...         ...  ...         ...   \n",
-      "1090        2004.0    0.000000         0.0         0.0  ...       615.0   \n",
-      "1091        1959.0    0.000000         0.0         0.0  ...       294.0   \n",
-      "1092        2003.0    0.000000         0.0         0.0  ...       400.0   \n",
-      "1093        1958.0    0.000000         0.0         0.0  ...       350.0   \n",
-      "1094        1950.0    0.000000         0.0         0.0  ...       280.0   \n",
+      "1090        2007.0       428.0         0.0         0.0  ...       895.0   \n",
+      "1091        2006.0         0.0       980.0         0.0  ...       450.0   \n",
+      "1092        1996.0      1378.0      1387.0         0.0  ...       807.0   \n",
+      "1093        1965.0       101.0       643.0         0.0  ...       440.0   \n",
+      "1094        2003.0       922.0        56.0         0.0  ...       968.0   \n",
       "\n",
       "      WoodDeckSF  OpenPorchSF  EnclosedPorch  3SsnPorch  ScreenPorch  \\\n",
-      "0          100.0         16.0            0.0        0.0          0.0   \n",
-      "1          216.0        110.0            0.0        0.0          0.0   \n",
-      "2          160.0         33.0            0.0        0.0          0.0   \n",
-      "3            0.0        120.0            0.0        0.0          0.0   \n",
-      "4          116.0         78.0            0.0        0.0          0.0   \n",
+      "0            0.0          0.0           90.0        0.0          0.0   \n",
+      "1          220.0         47.0            0.0        0.0          0.0   \n",
+      "2          344.0          0.0           40.0        0.0          0.0   \n",
+      "3          192.0         84.0            0.0        0.0          0.0   \n",
+      "4          100.0         63.0            0.0        0.0          0.0   \n",
       "...          ...          ...            ...        ...          ...   \n",
-      "1090       182.0        182.0            0.0        0.0          0.0   \n",
-      "1091         0.0          0.0            0.0        0.0          0.0   \n",
-      "1092         0.0         48.0            0.0        0.0          0.0   \n",
-      "1093         0.0          0.0            0.0        0.0          0.0   \n",
-      "1094         0.0          0.0          116.0        0.0          0.0   \n",
+      "1090         0.0         49.0            0.0        0.0          0.0   \n",
+      "1091         0.0         49.0            0.0        0.0          0.0   \n",
+      "1092       361.0         76.0            0.0        0.0          0.0   \n",
+      "1093         0.0        138.0            0.0        0.0          0.0   \n",
+      "1094       248.0        105.0            0.0        0.0          0.0   \n",
       "\n",
       "      PoolArea  MiscVal  MoSold  YrSold  \n",
-      "0          0.0      0.0     9.0  2009.0  \n",
-      "1          0.0      0.0     6.0  2007.0  \n",
-      "2          0.0      0.0     2.0  2010.0  \n",
-      "3          0.0      0.0    12.0  2008.0  \n",
-      "4          0.0      0.0     5.0  2010.0  \n",
+      "0          0.0      0.0     5.0  2006.0  \n",
+      "1          0.0      0.0     7.0  2007.0  \n",
+      "2          0.0      0.0     5.0  2010.0  \n",
+      "3          0.0      0.0     7.0  2008.0  \n",
+      "4          0.0      0.0     6.0  2009.0  \n",
       "...        ...      ...     ...     ...  \n",
-      "1090       0.0      0.0    11.0  2009.0  \n",
-      "1091       0.0   1200.0     7.0  2007.0  \n",
-      "1092       0.0      0.0     8.0  2007.0  \n",
-      "1093       0.0      0.0     6.0  2009.0  \n",
-      "1094       0.0      0.0     8.0  2006.0  \n",
+      "1090       0.0      0.0     2.0  2007.0  \n",
+      "1091       0.0      0.0     6.0  2007.0  \n",
+      "1092       0.0      0.0     7.0  2006.0  \n",
+      "1093       0.0      0.0    12.0  2006.0  \n",
+      "1094       0.0      0.0     6.0  2009.0  \n",
       "\n",
       "[1095 rows x 36 columns],\n",
       "                                                    'valid_x': 'var:X_test',\n",
@@ -497,59 +497,59 @@
       "                                                    'method': 'shap',\n",
       "                                                    'mode': 'regression',\n",
       "                                                    'train_data':       MSSubClass  LotFrontage  LotArea  OverallQual  OverallCond  YearBuilt  \\\n",
-      "0          120.0    43.000000   3182.0          7.0          5.0     2005.0   \n",
-      "1           20.0    70.851111  14585.0          6.0          6.0     1960.0   \n",
-      "2           20.0    64.000000  10475.0          8.0          5.0     2008.0   \n",
-      "3           20.0    95.000000  11639.0          7.0          5.0     2007.0   \n",
-      "4           20.0    68.000000   8562.0          5.0          6.0     1957.0   \n",
+      "0           70.0     60.00000   9600.0          4.0          2.0     1900.0   \n",
+      "1           60.0     69.81278  17542.0          7.0          7.0     1974.0   \n",
+      "2          190.0     76.00000   7630.0          5.0          9.0     1900.0   \n",
+      "3           60.0     75.00000  11404.0          7.0          5.0     1998.0   \n",
+      "4           60.0     60.00000   8123.0          6.0          5.0     2000.0   \n",
       "...          ...          ...      ...          ...          ...        ...   \n",
-      "1090        60.0    75.000000   9375.0          7.0          5.0     2003.0   \n",
-      "1091        20.0    70.851111   8339.0          5.0          7.0     1959.0   \n",
-      "1092        60.0    70.851111   7750.0          7.0          5.0     2003.0   \n",
-      "1093        20.0    68.000000   9571.0          5.0          3.0     1958.0   \n",
-      "1094        45.0    58.000000   6380.0          5.0          6.0     1922.0   \n",
+      "1090        20.0     75.00000   9986.0          8.0          5.0     2006.0   \n",
+      "1091        20.0     60.00000   7024.0          5.0          5.0     2005.0   \n",
+      "1092        60.0    118.00000  35760.0         10.0          5.0     1995.0   \n",
+      "1093        20.0     84.00000   8658.0          6.0          5.0     1965.0   \n",
+      "1094        20.0    103.00000  13472.0         10.0          5.0     2003.0   \n",
       "\n",
       "      YearRemodAdd  MasVnrArea  BsmtFinSF1  BsmtFinSF2  ...  GarageArea  \\\n",
-      "0           2006.0   11.000000        16.0         0.0  ...       397.0   \n",
-      "1           1987.0   85.000000       594.0       219.0  ...       572.0   \n",
-      "2           2008.0   72.000000         0.0         0.0  ...       776.0   \n",
-      "3           2008.0  107.928309         0.0         0.0  ...       480.0   \n",
-      "4           2002.0  145.000000       383.0         0.0  ...       364.0   \n",
+      "0           1950.0         0.0         0.0         0.0  ...       779.0   \n",
+      "1           2003.0         0.0       125.0      1031.0  ...       518.0   \n",
+      "2           1996.0         0.0         0.0         0.0  ...       672.0   \n",
+      "3           1999.0       202.0       252.0         0.0  ...       541.0   \n",
+      "4           2000.0        16.0         0.0         0.0  ...       463.0   \n",
       "...            ...         ...         ...         ...  ...         ...   \n",
-      "1090        2004.0    0.000000         0.0         0.0  ...       615.0   \n",
-      "1091        1959.0    0.000000         0.0         0.0  ...       294.0   \n",
-      "1092        2003.0    0.000000         0.0         0.0  ...       400.0   \n",
-      "1093        1958.0    0.000000         0.0         0.0  ...       350.0   \n",
-      "1094        1950.0    0.000000         0.0         0.0  ...       280.0   \n",
+      "1090        2007.0       428.0         0.0         0.0  ...       895.0   \n",
+      "1091        2006.0         0.0       980.0         0.0  ...       450.0   \n",
+      "1092        1996.0      1378.0      1387.0         0.0  ...       807.0   \n",
+      "1093        1965.0       101.0       643.0         0.0  ...       440.0   \n",
+      "1094        2003.0       922.0        56.0         0.0  ...       968.0   \n",
       "\n",
       "      WoodDeckSF  OpenPorchSF  EnclosedPorch  3SsnPorch  ScreenPorch  \\\n",
-      "0          100.0         16.0            0.0        0.0          0.0   \n",
-      "1          216.0        110.0            0.0        0.0          0.0   \n",
-      "2          160.0         33.0            0.0        0.0          0.0   \n",
-      "3            0.0        120.0            0.0        0.0          0.0   \n",
-      "4          116.0         78.0            0.0        0.0          0.0   \n",
+      "0            0.0          0.0           90.0        0.0          0.0   \n",
+      "1          220.0         47.0            0.0        0.0          0.0   \n",
+      "2          344.0          0.0           40.0        0.0          0.0   \n",
+      "3          192.0         84.0            0.0        0.0          0.0   \n",
+      "4          100.0         63.0            0.0        0.0          0.0   \n",
       "...          ...          ...            ...        ...          ...   \n",
-      "1090       182.0        182.0            0.0        0.0          0.0   \n",
-      "1091         0.0          0.0            0.0        0.0          0.0   \n",
-      "1092         0.0         48.0            0.0        0.0          0.0   \n",
-      "1093         0.0          0.0            0.0        0.0          0.0   \n",
-      "1094         0.0          0.0          116.0        0.0          0.0   \n",
+      "1090         0.0         49.0            0.0        0.0          0.0   \n",
+      "1091         0.0         49.0            0.0        0.0          0.0   \n",
+      "1092       361.0         76.0            0.0        0.0          0.0   \n",
+      "1093         0.0        138.0            0.0        0.0          0.0   \n",
+      "1094       248.0        105.0            0.0        0.0          0.0   \n",
       "\n",
       "      PoolArea  MiscVal  MoSold  YrSold  \n",
-      "0          0.0      0.0     9.0  2009.0  \n",
-      "1          0.0      0.0     6.0  2007.0  \n",
-      "2          0.0      0.0     2.0  2010.0  \n",
-      "3          0.0      0.0    12.0  2008.0  \n",
-      "4          0.0      0.0     5.0  2010.0  \n",
+      "0          0.0      0.0     5.0  2006.0  \n",
+      "1          0.0      0.0     7.0  2007.0  \n",
+      "2          0.0      0.0     5.0  2010.0  \n",
+      "3          0.0      0.0     7.0  2008.0  \n",
+      "4          0.0      0.0     6.0  2009.0  \n",
       "...        ...      ...     ...     ...  \n",
-      "1090       0.0      0.0    11.0  2009.0  \n",
-      "1091       0.0   1200.0     7.0  2007.0  \n",
-      "1092       0.0      0.0     8.0  2007.0  \n",
-      "1093       0.0      0.0     6.0  2009.0  \n",
-      "1094       0.0      0.0     8.0  2006.0  \n",
+      "1090       0.0      0.0     2.0  2007.0  \n",
+      "1091       0.0      0.0     6.0  2007.0  \n",
+      "1092       0.0      0.0     7.0  2006.0  \n",
+      "1093       0.0      0.0    12.0  2006.0  \n",
+      "1094       0.0      0.0     6.0  2009.0  \n",
       "\n",
       "[1095 rows x 36 columns],\n",
-      "                                                    'trained_model': XGBRegressor(base_score=182895.9406392694, booster='gbtree',\n",
+      "                                                    'trained_model': XGBRegressor(base_score=179240.15525114155, booster='gbtree',\n",
       "             colsample_bylevel=0.8, colsample_bytree=0.8, gamma=0,\n",
       "             learning_rate=0.1, max_delta_step=0, max_depth=5,\n",
       "             min_child_weight=1, missing=None, n_estimators=1000, n_jobs=1,\n",
@@ -598,6 +598,10 @@
       "Interpret 500/1095 samples\n",
       "Interpret 600/1095 samples\n",
       "Interpret 700/1095 samples\n",
+      "Ill-conditioned matrix (rcond=3.95263e-17): result may not be accurate.\n",
+      "Ill-conditioned matrix (rcond=1.469e-17): result may not be accurate.\n",
+      "Ill-conditioned matrix (rcond=1.45731e-18): result may not be accurate.\n",
+      "Ill-conditioned matrix (rcond=1.23265e-18): result may not be accurate.\n",
       "Interpret 800/1095 samples\n",
       "Interpret 900/1095 samples\n",
       "Interpret 1000/1095 samples\n",
